stimulus ValueChanged callbacks

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -9,7 +9,7 @@
                 <%= form.object.errors.full_messages.first %>
             </p>
         <% end %>
-        <%= form.text_field :name %>
+        <%= form.text_field :name, data: { hello_target: "name", action: "keyup->hello#update_name_value"} %>
     </div>
 
     <div>
